syntax = "proto3";

option java_multiple_files = true;
option java_package = "sanity.nil.grpc.meta";
option java_outer_classname = "MetadataServiceProto";

package meta;

service MetadataService {
  rpc GetFileBlockList (GetFileBlockListRequest) returns (GetFileBlockListResponse) {}
}

message GetFileBlockListRequest {
  string id = 1;
}

message GetFileBlockListResponse {
  repeated string block = 1;
}